--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -17,9 +17,9 @@
         = f.text_field :email, disabled: @user, class: 'small-12 medium-4'
     .grid-x
       .cell.small-12.medium-2
-        = f.label :upn
+        = f.label :uid
       .cell.small-12.medium-10
-        = f.text_field :upn, disabled: @user, class: 'small-12 medium-4'
+        = f.text_field :uid, disabled: @user, class: 'small-12 medium-4'
     .grid-x
       .cell.small-12.medium-2
         = f.label :era_commons
