--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -3,5 +3,5 @@
 %h1
   Your Profile
 
-= form_with(model: @user, url: profile_path, method: :put, local: true) do |f|
+= form_with(model: @user, scope: :user, url: profile_path, method: :put, local: true) do |f|
   = render partial: 'users/form', locals: { f: f }
