--- a/app/views/grants/_form.html.haml
+++ b/app/views/grants/_form.html.haml
@@ -1,3 +1,5 @@
+- app_url = full_root_url
+
 %h3
   Overview
 .grid-x
@@ -8,13 +10,13 @@
   .cell.small-12
     = f.label :slug, 'Short Name', disabled: disable_fields
   .cell.grid-x.small-12
-    .cell.small-12.medium-4
+    .cell.small-12{ class: "medium-#{(app_url.length/10).floor}" }
       %label.middle{ style: 'font-size: .85em' }
-        = full_root_url
-    .cell.small-12.medium-8
+        = app_url
+    .cell.small-12.medium-6
       = f.text_field :slug, required: true, maxlength: Grant::SLUG_MAX_LENGTH, disabled: disable_fields, class: 'small-12 medium-6', aria: { 'described-by': 'slug-help' }
       %p.help-text#slug-help
-        Generates a unique short URL to use when advertising or linking to this grant (3-15 characters).
+        Creates a unique short URL to use when advertising or linking to this grant (3-15 characters).
 .grid-x.grid-padding-y
   .cell
     = f.label :rfa, 'RFA'
