Task/two user types 554 (#576)
* Initial commit for open-sourcing project

Task/create config file 434 (#483)
#434 
#490

* Task/update competitions config 491 (#495)

* Created storage.yml example.
* Update example deploy_config and competitions_config.
* Update gitignore.
* Create example config files.
* Updated views with text from competitions_config.yml.
* Changed name of idp_cert.
* Added notes for documentation to readme.

* Make environments example files and update readme. #492 (#501)

* Task/remove credentials from repo 493 (#506)

* Remove credentials from repo
* Switch credentials to secrets. #493
* Added documentation. #493

* Fix Typo.

* Changes from review of documentation. #509 (#511)

* take out specifics from error pages. #494 (#522)

* take out specifics from error pages. #494

* Removed some of the unnecessary CSS. #494

* Feature/nu shibboleth 438 (#531)

* Upgraded ruby version to 2.6.6. #438
* change quotation marks in migration. #438
* remove change in quotation marks. #438
* Change failing migration. #438
* made the idp_security settings configurable. #438

* Task/standardize to haml (#499)

* Release/0.9.9 (#505)

* Bump version

* Final front-end updates in #451

* task/0.9.9 testing feedback (#502)

* Fix typo and reword text #453

* Account for excel reserved chars in sheet titles #459

* Remove devise views. #488 (#508)

* Task/update submission show layout 461 (#510)

* Added some formatting to the submissions show page. #461
* Changes suggested by John. #461
* Change to font-size after conversation. #461

* Task/remove draft grants from my reviews 355 (#524)

* added conditionals for whether a grant is published to review index. #355
* add specs for draft grant review UI. #355

* grant creator request review is inaccessible (#529)

* Change controller inheritance in order to use correct callback #527

* Add show spec to ensure basic functionality #527

* added

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,25 +1,21 @@
 .grid-x
   .cell
+    - disabled = !@user.registered_user?
     .grid-x
       .cell.small-12.medium-2
         = f.label :first_name
       .cell.small-12.medium-10
-        = f.text_field :first_name, disabled: @user, class: 'small-12 medium-4'
+        = f.text_field :first_name, disabled: disabled, class: 'small-12 medium-4'
     .grid-x
       .cell.small-12.medium-2
         = f.label :last_name
       .cell.small-12.medium-10
-        = f.text_field :last_name, disabled: @user, class: 'small-12 medium-4'
+        = f.text_field :last_name, disabled: disabled, class: 'small-12 medium-4'
     .grid-x
       .cell.small-12.medium-2
         = f.label :email
       .cell.small-12.medium-10
-        = f.text_field :email, disabled: @user, class: 'small-12 medium-4'
-    .grid-x
-      .cell.small-12.medium-2
-        = f.label :upn
-      .cell.small-12.medium-10
-        = f.text_field :upn, disabled: @user, class: 'small-12 medium-4'
+        = f.text_field :email, disabled: true, class: 'small-12 medium-4'
     .grid-x
       .cell.small-12.medium-2
         = f.label :era_commons
@@ -27,7 +23,6 @@
         = f.text_field :era_commons, class: 'small-12 medium-4'
     .grid-x
       .cell.small-12.medium-2
-        = f.label :user_type
       .cell.small-12.medium-10
         - if current_user.system_admin?
           = render partial: 'users/admin_checkboxes', locals: { f: f, user: @user } if current_user.system_admin?
