--- a/app/views/devise/menu/_login_items.html.haml
+++ b/app/views/devise/menu/_login_items.html.haml
@@ -16,8 +16,12 @@
     %ul.menu
       %li
         = link_to 'Edit Your Profile', profile_path
-      %li
-        = link_to 'Log Out', destroy_user_session_path, method: :delete
+      - if current_user.registered_user?
+        %li
+          = link_to 'Log Out', destroy_registered_user_session_path, method: :delete
+      - if current_user.saml_user?
+        %li
+          = link_to 'Log Out', destroy_saml_user_session_path, method: :delete
 - else
-  %li.login
-    = link_to 'Login', new_user_session_path
+  %li
+    = link_to 'Login', login_index_path
