--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -1,3 +1,3 @@
 <p>Hello <%= @resource.email %>!</p>
 
-<p>We're contacting you to notify you that your password has been changed.</p>
+<p><%= "We're contacting you to notify you that your password in #{COMPETITIONS_CONFIG[:application_name]} has been changed." %></p>
