--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -30,11 +30,11 @@
         %th
           = sort_link(@q, :email, {}, { title: 'Sort on Email' })
         %th
-          = sort_link(@q, :type_nulls_last, t('activerecord.attributes.user.type'), {}, { title: 'Sort on User Type' })
+          = sort_link(@q, :type_nulls_last, t('helpers.label.user.type'), {}, { title: 'Sort on User Type' })
         %th
-          = sort_link(@q, :created_at, t('activerecord.attributes.user.created_at'), {}, { title: 'Sort on Join Date' })
+          = sort_link(@q, :created_at, t('helpers.label.user.created_at'), {}, { title: 'Sort on Join Date' })
         %th
-          = sort_link(@q, :current_sign_in_at_nulls_last, t('activerecord.attributes.user.current_sign_in_at'), {}, { title: 'Sort on Last Access' })
+          = sort_link(@q, :current_sign_in_at_nulls_last, I18n.t('helpers.label.user.current_sign_in_at'), {}, { title: 'Sort on Last Access' })
         %th
 
     - @users.each do |user|
