--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,7 +1,7 @@
 - provide(:title_tag, 'Sign Up')
 %h2 Sign up
 %p
-  = "#{COMPETITIONS_CONFIG[:saml][:idp_entity_name]} user?"
+  = "#{COMPETITIONS_CONFIG[:devise][:saml_authenticatable][:idp_entity_name]} user?"
   = link_to 'Log in', new_saml_user_session_path
 %p
   = "Please provide the following information to create a new account. If you already have an account,"
