--- a/app/views/users/_user.html.haml
+++ b/app/views/users/_user.html.haml
@@ -3,11 +3,11 @@
     = link_to sortable_full_name(user), edit_user_path(user)
   %td
     = user.email
-  %td
-    = user.type
-  %td
+  %td.small
+    = user.saml_user? ? 'SAML User' : 'Registered User'
+  %td.small
     = date_mmddyyyy(user.created_at)
-  %td
-    = time_ago_in_words(user.current_sign_in_at)
-  %td
+  %td.small
+    = time_ago_in_words(user.current_sign_in_at) if user.current_sign_in_at.present?
+  %td.small
     = link_to 'Edit', edit_user_path(user)
