--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,14 +1,13 @@
 - provide(:title_tag, 'Sign Up')
 %h2 Sign up
 %p
-  = "#{COMPETITIONS_CONFIG[:saml][:idp_entity_name]} user?"
+  = "#{COMPETITIONS_CONFIG[:devise][:saml_authenticatable][:idp_entity_name]} user?"
   = link_to 'Log in', new_saml_user_session_path
 %p
   = "Please provide the following information to create a new account. If you already have an account,"
   = link_to 'return to the log in page', login_index_path
   = '.'
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
   #login_fields
     %div
       = f.label :first_name
