--- a/app/views/grants/_form.html.haml
+++ b/app/views/grants/_form.html.haml
@@ -1,4 +1,4 @@
-- app_url = full_root_url
+- grants_url = grants_url()
 
 %h3
   Overview
@@ -10,9 +10,9 @@
   .cell.small-12
     = f.label :slug, 'Short Name', disabled: disable_fields
   .cell.grid-x.small-12
-    .cell.small-12{ class: "medium-#{(app_url.length/10).floor}" }
+    .cell.small-12{ class: "medium-#{(grants_url.length/10).floor}" }
       %label.middle{ style: 'font-size: .85em' }
-        = app_url
+        = "#{grants_url}/"
     .cell.small-12.medium-6
       = f.text_field :slug, required: true, maxlength: Grant::SLUG_MAX_LENGTH, disabled: disable_fields, class: 'small-12 medium-6', aria: { 'described-by': 'slug-help' }
       %p.help-text#slug-help
