--- a/app/views/devise/menu/_login_items.html.haml
+++ b/app/views/devise/menu/_login_items.html.haml
@@ -24,4 +24,6 @@
           = link_to 'Log Out', destroy_saml_user_session_path, method: :delete
 - else
   %li
-    = link_to 'Login', login_index_path
+    = link_to 'Sign up', new_registered_user_registration_path
+  %li
+    = link_to 'Log in', login_index_path
