--- a/app/views/login/index.html.haml
+++ b/app/views/login/index.html.haml
@@ -1,2 +1,4 @@
-.row
-  = render 'login/login'
+.grid-container.grid-container-padded
+  .grid-x.grid-padding-x.align-center
+    .cell.align-center-middle
+      = render 'login'
