--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -13,7 +13,7 @@
             </div>
 
             <div class="actions">
-              <%= f.submit 'Reset Password' %>
+              <%= f.submit 'Reset Password', class: 'button expanded' %>
             </div>
           </div>
         <% end %>
