Simplify disable logic - found during #612

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,6 +1,6 @@
 .grid-x
   .cell
-    - disabled = !@user.registered_user?
+    - disabled = @user.saml_user?
     .grid-x
       .cell.small-12.medium-2
         = f.label :first_name
