--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,28 +1,37 @@
-- provide(:title_tag, 'Sign Up')
-%h2 Sign up
-%p
-  = "#{COMPETITIONS_CONFIG[:devise][:saml_authenticatable][:idp_entity_name]} user?"
-  = link_to 'Log in', new_saml_user_session_path
-%p
-  = "Please provide the following information to create a new account. If you already have an account,"
-  = link_to 'return to the log in page', login_index_path
-  = '.'
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  #login_fields
-    %div
-      = f.label :first_name
-      = f.text_field :first_name, autofocus: true , required: true
-    %div
-      = f.label :last_name
-      = f.text_field :last_name, required: true
-    %div
-      = f.label :email
-      = f.email_field :email, required: true
-    %div
-      = f.label :password
-      = f.password_field :password, required: true
-    %div
-      = f.label :password_confirmation
-      = f.password_field :password_confirmation, required: true
-    %div= f.submit "Sign up"
-= render "devise/shared/links"
+.grid-container.grid-container-padded
+  .grid-x.grid-padding-x.align-center
+    .cell.align-center-middle
+      %h3
+        Create an Account
+
+      .cell
+        %p
+          = "#{COMPETITIONS_CONFIG[:devise][:saml_authenticatable][:idp_entity_name]} user?"
+          = link_to 'Log in', new_saml_user_session_path
+        %p
+          Please provide the following information to create a new account.
+          %br
+          If you already have an account,
+          = link_to 'return to the log in page', login_index_path
+          = '.'
+        = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+          #fields
+            .cell.small-10
+              = f.label :first_name
+              = f.text_field :first_name, autofocus: true , required: true
+            .cell
+              = f.label :last_name
+              = f.text_field :last_name, required: true
+            .cell
+              = f.label :email
+              = f.email_field :email, required: true
+            .cell
+              = f.label :password
+              = f.password_field :password, required: true, placeholder: "#{(COMPETITIONS_CONFIG[:devise][:registerable][:password][:min_length])} characters minimum"
+            .cell
+              = f.label :password_confirmation
+              = f.password_field :password_confirmation, required: true
+            .cell
+              = f.submit "Create My Account", class: 'button expanded'
+
+        = render "devise/shared/links"
