WIP: draft panel views, update grant factories and specs #627

--- a/app/views/panels/_admins.html.haml
+++ b/app/views/panels/_admins.html.haml
@@ -1,3 +1,13 @@
-_admins.html.haml
 
-always show a table of...submissions?
+%table
+  %tr
+    %th
+      Applicant
+    %th
+      Submission (link)
+    %th
+      Reviews (link)
+    %th
+      Overall Impact Avg.
+    %th
+      Composite Avg.
