--- a/app/views/panels/edit.html.haml
+++ b/app/views/panels/edit.html.haml
@@ -10,14 +10,7 @@
 %p
   Lorem ipsum dolor sum introductory info about panels.
 
-= form_with(model: [@grant, @grant.panel], method: :patch, local: true) do |f|
-  .grid-x
-    .cell.small-12.medium-3
-      = f.label         :instructions
-    .cell.small-12.medium-9
-      = f.hidden_field  :instuctions, id: :panel_instructions
-      %trix-editor(input='panel_instuctions')
-
+= form_with(model: [@grant, @panel], method: :patch, local: true) do |f|
   %h3
     Meeting Information
 
@@ -33,26 +26,32 @@
       = f.url_field  :meeting_link, aria: { 'described-by': 'link-help' }
       %p.help-text#link-help
         e.g. secure (https) link to videoconference service
+  .grid-x
+    .cell.small-12.medium-3
+      = f.label :instructions
+    .cell.small-12.medium-9
+      = f.hidden_field  :instuctions, id: :panel_instructions
+      %trix-editor(input='panel_instuctions')
 
 
   %h3
-    Panel Mode
+    Panel Time
 
   %p
-    When set, Reviewers will have access to all Reviews and Submissions during the defined timeframe on the
+    During this timeframe Reviewers will have access to all Reviews and Submissions. Start and end times are required.
     = succeed "." do
       = link_to 'Panel page', grant_panel_path(@grant)
 
   .grid-x
     .cell.small-12.medium-3
-      = f.label      :start_datetime
+      = f.label :start_datetime
     .cell.small-12.medium-3
-      = f.text_field :start_datetime
+      = f.text_field :start_datetime, value: @panel.start_datetime&.strftime('%m/%d/%Y %l:%M%P')
   .grid-x
     .cell.small-12.medium-3
-      = f.label      :end_datetime
+      = f.label :end_datetime
     .cell.small-12.medium-3
-      = f.text_field :start_datetime
+      = f.text_field :end_datetime, value: @panel.end_datetime&.strftime('%m/%d/%Y %l:%M%P')
 
   .grid-x
     .cell.small-12
@@ -60,9 +59,12 @@
 
 :javascript
   $(function() {
-    $('#panel_start_datetime, #panel_start_datetime').fdatepicker({
+    $('#panel_start_datetime, #panel_end_datetime').fdatepicker({
       format: 'mm/dd/yyyy h:iia',
+      formatText: 'mm/dd/yyyy h:iia',
+      linkFormat: 'mm/dd/yyyy h:iia',
       disableDblClickSelection: true,
+      minuteStep: 30,
       pickTime: true,
       nonMilitaryTime: true
     });
