PR feedback: panel instructions input and specs #627

--- a/app/views/panels/edit.html.haml
+++ b/app/views/panels/edit.html.haml
@@ -30,8 +30,8 @@
     .cell.small-12.medium-3
       = f.label :instructions
     .cell.small-12.medium-9
-      = f.hidden_field  :instuctions, id: :panel_instructions
-      %trix-editor(input='panel_instuctions')
+      = f.hidden_field  :instructions, id: :panel_instructions
+      %trix-editor(input='panel_instructions')
 
 
   %h3
