--- a/app/views/grant_submissions/submissions/_file_upload_field.html.haml
+++ b/app/views/grant_submissions/submissions/_file_upload_field.html.haml
@@ -3,7 +3,7 @@
     = f.hidden_field :document, value: f.object.document.signed_id, class: 'document_file_input'
     = link_to f.object.document.filename.to_s, rails_blob_path(document, disposition: "attachment"), {:'data-form_builder_upload_file_link' => ''}
 
-  = f.file_field :document, disabled: disabled, accept: allowed_file_extensions, class: 'document_file_input'
+  = f.file_field :document, disabled: disabled, direct_upload: true, accept: allowed_file_extensions, class: 'document_file_input'
   - if !disabled && has_saved_file
     = link_to 'Clear', '#', class: 'button tiny warning', :'data-form_builder_upload_clear'=>''
     = f.hidden_field remove_document, {:'data-form_builder_remove_document' => '' }
