--- a/app/views/panels/_panel_schedule_info.html.haml
+++ b/app/views/panels/_panel_schedule_info.html.haml
@@ -1,16 +1,22 @@
-- if @panel.is_open?
-  %div.callout.success
+- if @panel.start_datetime.blank?
+  .callout.primary
+    %strong
+      Panel is not scheduled
+    %p
+      This grant has not scheduled a panel.
+- elsif @panel.is_open?
+  .callout.success
     %p
       This section will be available to reviewers until #{will_close_at_string(panel: @panel)}.
 - elsif @panel.start_datetime > DateTime.now
-  .callout.primary
+  .callout.warning
     %strong
-      Panel has not begun
+      Panel has not started
     %p
       This section will be available to reviewers at #{will_open_at_string(panel: @panel)}. Please visit or refresh then.
 - else
   .callout.alert
     %strong
-      Panel has closed
+      Panel has ended
     %p
-      This panel has closed and is no longer accessible to reviewers.
+      This panel has ended and is no longer accessible to reviewers.
