--- a/app/views/panels/show.html.haml
+++ b/app/views/panels/show.html.haml
@@ -18,5 +18,5 @@
 
 = render 'panel_schedule_info'
 
-- if user_has_grant_viewer_access || @panel.is_open?
+- if policy(@panel).view_content?
   = render 'panel_content'
