Add submissions and reviews to panel (#651)
* Fix post-merge specs following #627

* Change name of unused :eager_loading scope to :with_responses, expand scope #628

* Add submission show route to panel #628

* Change review_period_closed? to check against .end_of_day - found during #628

* Align table cells to top of row #628

* Change link path based on in-/complete review. Found during #628

* Include foundation breadcrumb css #628

* Add panel open/closed callout and panel date display helper #628

* Account for unscheduled panels. #628

* Specs for will_[open/close]_at_string helper #682

* Remove refactored/deleted partial #628

* Add guard in case dates are empty #628

* Include default sort spec - found during #628

* Redirect panel/submissions to panel :show #628

* Update panel show page #628

* Add views for panel submission and reviews  #628

* CSS updates related to #628

* Factory updates to account for panels #628

* Expand panel specs, add initial panel submissions and review specs #628

* Move panel sub page authorizations to concern #637

* Add/user panel :view_content? policy #637

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -20,7 +20,7 @@
 // @include foundation-accordion;
 // @include foundation-accordion-menu;
 // @include foundation-badge;
-// @include foundation-breadcrumbs;
+@include foundation-breadcrumbs;
 @include foundation-button-group;
 @include foundation-callout;
 @include foundation-card;
@@ -63,4 +63,16 @@
 label {
   color: $black;
   font-size: 1.15em;
+}
+
+html, body {
+  height: 100%;
+}
+
+main {
+  padding: 1em;
+}
+
+h1 ~ h2 {
+  margin-top: 0;
 }
