--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,3 +1,5 @@
+@import 'settings';
+
 .grid-container {
   header {
     .top-bar-left {
@@ -97,6 +99,13 @@ th {
   vertical-align: bottom;
 }
 
+td {
+  vertical-align: top;
+  ul.menu a {
+    padding-top: 0.25em;
+  }
+}
+
 // submission labels contain paragraphs
 //   see: grant_submission_responses.scss
 main:not(.submissions) label.required-true:after {
@@ -136,4 +145,21 @@ trix-editor + p.help-text {
 a.icon-24px {
   position: relative;
   bottom: 2px;
+}
+
+// grant header
+h1#grant-name {
+  font-size: 1.25em;
+  font-weight: bold;
+  line-height: 1em;
+  a {
+    color: $black;
+  }
+}
+
+h2#section {
+  font-size: 1.65em;
+  a {
+    color: $black;
+  }
 }
