--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,9 +1,9 @@
 %footer
-  .grid-x.grid-padding-x#logos
-    .cell.small-12.medium-6.small-text-center.medium-text-right
+  #logos.grid-x.grid-padding-x
+    .cell.small-12.medium-6.text-center.medium-text-right
       = link_to 'http://cd2h.org/' do
         = image_tag 'CD2H_logo.png', class: 'logo'
-    .cell.small-12.medium-6.small-text-center.medium-text-left
+    .cell.small-12.medium-6.text-center.medium-text-left
       = link_to 'http://nucats.northwestern.edu/' do
         = image_tag 'CATS-gradient.png', class: 'logo'
   .grid-x.grid-padding-x.text-center
