--- a/app/views/grants/_dates_card.html.haml
+++ b/app/views/grants/_dates_card.html.haml
@@ -24,3 +24,6 @@
           Panel End:
         %dd
           = grant.panel.end_datetime
+        %hr
+        .text-center
+          = link_to 'View Panel', grant_panel_path(grant)
