--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -6,15 +6,21 @@
           .home
             = link_to "#{COMPETITIONS_CONFIG[:application_name]}", root_path
         - if user_signed_in?
-          - if current_user.system_admin? || current_user.grant_creator? || current_user.editable_grants.kept.any?
+          - user_has_editable_grants  = current_user.editable_grants.kept.any?
+          - user_has_reviews          = current_user.reviews.kept.any?
+
+          - if current_user.system_admin? || current_user.grant_creator? || user_has_editable_grants
             %li
               = link_to 'MyGrants', profile_grants_path
-          - if current_user.reviews.kept.any?
+          - if user_has_reviews
             %li
               = link_to 'MyReviews', profile_reviews_path
           - if current_user.submissions.kept.any?
             %li
               = link_to 'MySubmissions', profile_submissions_path
+          - if user_has_editable_grants || user_has_reviews
+            %li
+              = link_to 'MyPanels', profile_panels_path
     .top-bar-right
       %ul.dropdown.menu{"data-dropdown-menu" => ""}
         = render 'layouts/header_help_links'
