Cleanup, clarification, typos found during #658

--- a/app/views/grants/duplicate/new.html.haml
+++ b/app/views/grants/duplicate/new.html.haml
@@ -8,9 +8,8 @@
   Duplicating a grant copies information from the previous grant so you don't need to start from scratch.
 
 %p
-  Once you update and save, all questions, criteria, and roles will be copied from
+  Once you update and save, all questions, criteria, panel instructions, and roles will be copied from
   = link_to "#{@grant.name}", grant_path(params[:grant_id])
-
 
 %p
   You can change or delete anything.
