--- a/app/views/panels/_panel_metadata.html.haml
+++ b/app/views/panels/_panel_metadata.html.haml
@@ -15,6 +15,6 @@
       - if @panel.meeting_link.present?
         .link
           %div
-            Link
+            Link:
           %div
             = link_to "#{@panel.meeting_link}", @panel.meeting_link
