--- a/app/views/panels/_panel_schedule_info.html.haml
+++ b/app/views/panels/_panel_schedule_info.html.haml
@@ -13,7 +13,7 @@
     %strong
       Panel has not started
     %p
-      This section will be available to reviewers at #{will_open_at_string(panel: @panel)}. Please visit or refresh then.
+      This section will be available to reviewers at #{will_open_at_string(panel: @panel)}.
 - else
   .callout.alert
     %strong
